--- a/BLACKLINK/index.html
+++ b/BLACKLINK/index.html
@@ -19,7 +19,7 @@
     <div class="modal-container" id="modal">
         <div class="modal">
             <div class="modal-header">
-                <h3>Backlink Ekle</h3>
+                <h3>Add Backlink</h3>
                 <i class="fas fa-times close-icon" id="close-modal"></i>
             </div>
             <div class="modal-content">
